--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,43 +1,47 @@
 * {
-  font-family: "RobotoMono Nerd Font";
+  font-family: "Ubuntu Nerd Font";
   font-weight: 500;
   font-size: 16px;
 }
 
 window#waybar {
-  background: #1b1f28;
+  background: rgba(0,0,0,0);
   color: #e0def4;
-  border-bottom: solid 3px #2f333c;
-  padding-bottom: 2px;
+  border-bottom: solid 0px #2f333c;
+  padding-bottom: 0px;
 }
 
 tooltip {
-  background: #2f333c;
+  background: rgba(0,0,0,0);
   border-radius: 15px;
-  border-width: 2px;
+  border-width: 0px;
   border-color: #4fa6ed;
 }
 
 #workspaces {
   background: #2f333c;
-  border-top-right-radius: 10px;
+  border-radius: 0px 15px 15px 0px;
   border: 0;
+  padding-right: 8px;
+  padding-left: 8px;
+  margin-top: 6px;
+  margin-bottom: 2px;
 }
 
 #workspaces button {
   color: #dadae8;
   border: 0;
-  border-width: 10px;
-  padding: 10px 15px 10px 17px;
+  border-width: 16px;
+  padding: 4px 6px 4px 10px;
   border-bottom: 0px;
 }
 
 #workspaces button.active {
   background-image: linear-gradient(-70deg, #bf68d9,  #00bcd4);
   color: #1b1f28;
-  padding-right: 15px;
-  border-radius: 15px;
-  margin: 5px;
+  padding: 5px 6px 5px 10px;
+  border-radius: 3px;
+  margin: 0px 5px;
   padding-top: 2px;
   padding-bottom: 2px;
 }
@@ -45,7 +49,7 @@ tooltip {
 #workspaces button.active:hover {
   background-image: linear-gradient(-70deg, #bf68d9,  #00bcd4);
   color: #dadae8;
-  padding-right: 15px;
+  padding-right: 10px;
   margin: 5px;
   padding-top: 2px;
   padding-bottom: 2px;
@@ -66,17 +70,22 @@ tooltip {
 #pulseaudio,
 #battery,
 #backlight,
-#clock {
+#clock,
+#custom-baraction,
+#custom-powermenu{
   padding: 2px 10px 2px;
-  margin-top: 5px;
-  margin-bottom: 9px;
+  background: rgba(0,0,0,100); 
+  margin-top: 6px;
+  margin-bottom: 2px;
   color: #1b1f28;
+  border: 1px solid #242424;
 }
 
 #custom-playerctl {
+  font-family: "Iosevka Nerd Font";
   background: #2f333c;
-  margin-top: 5px;
-  margin-bottom: 9px;
+  margin-top: 6px;
+  margin-bottom: 1px;
   padding-right: 15px;
   padding-left: 15px;
   padding-top: 2px;
@@ -84,10 +93,10 @@ tooltip {
 }
 
 #network {
-  padding-right: 15px;
-  margin-right: 5px;
-  border-radius: 15px;
-  margin-left: 5px;
+  padding-right: 10px;
+  margin-right: 2px;
+  border-radius: 15px 2px 2px 15px;
+  margin-left: 2px;
   background-image: linear-gradient(-70deg, #9c27b0, #00bcd4);
 }
 
@@ -99,60 +108,52 @@ tooltip {
 } */
 
 #pulseaudio {
-  border-radius: 15px;
-  margin-right: 5px;
-  margin-left: 5px;
-  padding-right: 15px;
+  border-radius: 3px;
+  margin-right: 2px;
+  margin-left: 2px;
+  padding-right: 10px;
   background-image: linear-gradient(-70deg, #00bcd4, #9c27b0);
 }
 
 #battery {
-  border-radius: 15px;
-  margin-right: 5px;
-  margin-left: 5px;
-  padding-right: 15px;
+  border-radius: 3px;
+  margin-right: 2px;
+  margin-left: 2px;
+  padding-right: 10px;
   padding-top: 3px;
   background-image: linear-gradient(-70deg, #9c27b0, #00bcd4);
 }
 
 #backlight {
-  border-radius: 15px;
-  margin-right: 5px;
-  margin-left: 5px;
-  padding-right: 15px;
+  border-radius: 3px;
+  margin-right: 2px;
+  margin-left: 2px;
+  padding-right: 10px;
   padding-top: 4px;
   background-image: linear-gradient(-70deg, #00bcd4, #9c27b0);
 }
 
 #clock {
-  padding-right: 15px;
-  margin-right: 5px;
-  border-radius: 15px;
-  margin-left: 5px;
+  padding-right: 10px;
+  margin-right: 2px;
+  border-radius: 3px;
+  margin-left: 2px;
   padding-top: 4px;
   background-image: linear-gradient(-70deg, #9c27b0, #00bcd4);
 }
 
-#custom-backchanger {
-  border-radius: 15px;
-  margin-right: 6px;
-  margin-left: 5px;
-  padding-right: 15px;
-  padding-top: 1px;
-  padding-left: 1px;
-  margin-top: 4px;
-  margin-bottom: 8px;
+#custom-baraction {
+  border-radius: 3px;
+  margin-right: 2px;
+  margin-left: 2px;
+  padding: 2px 8px 2px 5px;
   background-image: linear-gradient(-70deg, #00bcd4, #9c27b0);
 }
 
 #custom-powermenu {
-  border-radius: 15px;
-  margin-right: 6px;
-  margin-left: 5px;
-  margin-top: 4px;
-  margin-bottom: 8px;
-  padding-right: 15px;
-  padding-left: 1px;
-  padding-top: 2px;
+  border-radius: 3px 0px 0px 3px;
+  margin-right: 0px;
+  padding: 2px 8px 2px 5px;
+  margin-left: 2px;
   background-image: linear-gradient(-70deg, #9c27b0, #00bcd4);
 }
